fixed scrollbar flash

--- a/src/components/ScrollContainer.module.css
+++ b/src/components/ScrollContainer.module.css
@@ -1,6 +1,7 @@
 .scrollable {
     flex-grow: 1;
     padding-right: 10px;
+    overflow-y: hidden;
     transition: overflow 0.15s ease-in-out;
   }
 
